--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "emoji-mart": "^5.6.0",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
